--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,7 @@
     },
     "routes": [
         { "src": "/build/(.*)", "dest": "/public/build/" },
+        { "src": "/(.*)", "dest": "public/$1" },
         { "src": "/(.*)", "dest": "/api/index.php" }
     ],
     "public": true,
