--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,10 @@
     },
     "routes": [
         { "src": "/build/(.*)", "dest": "/public/build/" },
-        { "src": "/(.*)", "dest": "public/$1" },
+        { "src": "/style.css", "dest": "/style.css" },
+        { "src": "/script.js", "dest": "/script.js" },
+        { "src": "/img/(.*)", "dest": "/img/$1" },
+        { "src": "/(.*)", "dest": "/index.html" },
         { "src": "/(.*)", "dest": "/api/index.php" }
     ],
     "public": true,
