--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,7 @@
     },
     "routes": [
         { "src": "/build/(.*)", "dest": "/public/build/" },
+        {"src": "/assets/(.*)$", "dest": "/api/assets.php?type=image&file=$1" },
         { "src": "/(css|js)/(.*)$", "dest": "/api/assets.php?type=$1&file=$2" },
         { "src": "/(.*)", "dest": "/api/index.php" }
     ],
