--- a/vercel.json
+++ b/vercel.json
@@ -28,9 +28,9 @@
         "LOG_CHANNEL": "stderr",
         "SESSION_DRIVER": "cookie",
         "DB_CONNECTION": "mysql",
-        "DB_HOST": "djujs.h.filess.io",
-        "DB_PORT": "3307",
-        "DB_DATABASE": "bps3322monikadb_swamoxygen",
-        "DB_USERNAME": "bps3322monikadb_swamoxygen"
+        "DB_HOST": "sql105.infinityfree.com",
+        "DB_PORT": "3306",
+        "DB_DATABASE": "if0_38167311_bps3322_monika_db",
+        "DB_USERNAME": "if0_38167311"
     }
 }
